# singular-weather-assignment

./: README.md  main.py  pyproject.toml
