[project]
name = "singular-weather-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "weather-scrapper",
    "weather-api",
]

[tool.uv.sources]
weather-scrapper = { workspace = true }
weather-api = { workspace = true }

[tool.uv.workspace]
members = [
    "packages/weather-scrapper",
    "packages/weather-api",
]
